package autowarePackage;

message AUTOWARE {
	optional int64 time = 1;
	optional double speed = 2;
	optional int32 rpm = 3;
	optional double longitude = 4;
	optional double latitude = 5;
}